--- a/css/src/lego_01_home.css
+++ b/css/src/lego_01_home.css
@@ -1040,7 +1040,7 @@
             background-repeat: no-repeat;
             background-position: 50% 50%;
             background-size: 100% auto;
-            background-image: url("../../img/t_04_friend.jpeg"); }
+            background-image: url("../img/t_04_friend.jpeg"); }
         #trend_area .trend_form .zone_f > li .text_zone {
           height: auto;
           padding: 5vw 2rem;
