--- a/scss/_temp/lego_home_03_slide.scss
+++ b/scss/_temp/lego_home_03_slide.scss
@@ -25,7 +25,7 @@
       }
       }//li
       .slide_01{@include bg_base("../../img/slide01.jpeg",$s:100% auto);}
-      .slide_02{@include bg_base("../../img/s_02.jpg",$s:100% auto);}
+      .slide_02{@include bg_base("../../img/s_02.jpeg",$s:100% auto);}
       .slide_03{@include bg_base("../../img/s_03.jpg",$s:100% auto);}
       .slide_04{@include bg_base("../../img/s_04.jpg",$s:100% auto);}
 
