--- a/scss/lego_01_home.scss
+++ b/scss/lego_01_home.scss
@@ -8,6 +8,7 @@
 
 @import "./_temp/lego_header.scss";
 @import "./_temp/lego_home_01_view.scss";
+@import "./_temp/lego_home_sub01.scss";
 @import "./_temp/lego_home_02_cate.scss";
 @import "./_temp/lego_home_03_slide.scss";
 @import "./_temp/lego_home_04_favor.scss";
