--- a/scss/_temp/lego_home_sub01.scss
+++ b/scss/_temp/lego_home_sub01.scss
@@ -1,12 +1,12 @@
 #sub_slide01{width: 100%; height: 45rem;overflow: hidden;
   .sub_box{width: 100%; height: 25rem;  transform: rotate(-6deg); margin-top:12rem;
     .sub_car{position:absolute; top:-5rem; width: 100%; height: 5rem;
-    >div{position:absolute; width: 8rem; height: 5rem;
-      &.car01{left:2rem;background-image: url("../../img/car01.png");}
-      &.car02{left:50rem;background-image: url("../../img/car02.png");}
-      &.car03{left:20rem;}
-      &.car04{left:43rem;}
-      &.car05{left:4rem;}
+    >div{position:absolute; bottom:0; @include bg_base2($s:100% auto);
+      &.car01{left:2rem;width: 11.5rem; height: 3.8125rem; background-image: url("../../img/car01.png");}
+      &.car02{left:50rem;width: 10.6875rem; height: 3.75rem;background-image: url("../../img/car02.png");}
+      &.car03{left:20rem;width: 11.6875rem; height: 3.1875rem;background-image: url("../../img/car03.png");}
+      &.car04{left:73rem;width: 11.625rem; height: 3.75rem;background-image: url("../../img/car04.png");}
+      &.car05{left:90rem;width: 12.1875rem; height: 4.125rem;background-image: url("../../img/car05.png");}
     }
   }//sub_car
   $w:3;
@@ -14,7 +14,7 @@
     li{float:left; width: 30rem; height: 100%;@include bg_base2($s:auto 100%);
       &.sub01{background-image: url('../../img/pic01.jpeg');}
       &.sub02{background-image: url('../../img/pic02.jpeg');}
-      &.sub03{background-image: url('../../img/pic03.jpg');}
+      &.sub03{background-image: url('../../img/pic03.jpeg');}
       &.sub04{background-image: url('../../img/pic04.jpg');}
       &.sub05{background-image: url('../../img/pic05.jpg');}
       &.sub06{background-image: url('../../img/pic06.jpg');}
