--- a/css/src/lego_01_home.css
+++ b/css/src/lego_01_home.css
@@ -222,98 +222,323 @@
   #gnb form {
     display: none; } }
 
-#view_area {
-  width: 100%;
-  height: auto;
-  padding: 5rem 10%;
-  box-sizing: border-box;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: auto 100%;
-  background-image: url("../../img/viewpic.jpg"); }
-  #view_area .view_bg {
-    position: relative;
-    width: 100%; }
-    #view_area .view_bg > div {
-      background-repeat: no-repeat;
-      background-position: 50% 50%;
-      background-size: contain; }
-    #view_area .view_bg .view_logo01 {
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  #view_area {
+    width: 100%;
+    height: 40rem;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: auto 100%;
+    background-image: url("../../img/viewpic.jpg"); }
+    #view_area .view_bg {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      padding-top: 2rem;
+      box-sizing: border-box; }
+      #view_area .view_bg div {
+        display: none; }
+      #view_area .view_bg .view_logo01 {
+        display: block;
+        min-width: 20rem;
+        margin: auto;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain;
+        background-image: url("../../img/viewlogoall.png"); }
+      #view_area .view_bg .view_pig01 {
+        display: block;
+        min-width: 20rem;
+        margin: auto;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain;
+        background-image: url("../../img/viewpicall.png"); }
+      #view_area .view_bg .btn {
+        display: block; } }
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  #view_area {
+    width: 100%;
+    height: 40rem;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: auto 100%;
+    background-image: url("../../img/viewpic.jpg"); }
+    #view_area .view_bg {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      padding-top: 2rem;
+      box-sizing: border-box; }
+      #view_area .view_bg div {
+        display: none; }
+      #view_area .view_bg .view_logo01 {
+        display: block;
+        min-width: 20rem;
+        margin: auto;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain;
+        background-image: url("../../img/viewlogoall.png"); }
+      #view_area .view_bg .view_pig01 {
+        display: block;
+        min-width: 20rem;
+        margin: auto;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain;
+        background-image: url("../../img/viewpicall.png"); }
+      #view_area .view_bg .btn {
+        display: block; } }
+
+@media screen and (min-width: 1280px) and (max-width: 1919px) {
+  #view_area {
+    width: 100%;
+    height: auto;
+    padding: 5rem 10%;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: auto 100%;
+    background-image: url("../../img/viewpic.jpg"); }
+    #view_area .view_bg {
+      position: relative;
+      width: 100%; }
+      #view_area .view_bg > div {
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain; }
+      #view_area .view_bg .view_logo01 {
+        position: absolute;
+        top: 0;
+        left: -10rem;
+        width: 46.5rem;
+        height: 327px;
+        background-image: url("../../img/viewlogo01.png");
+        opacity: 0; }
+      #view_area .view_bg .view_logo02 {
+        position: absolute;
+        top: 6rem;
+        left: 20rem;
+        width: 17.5rem;
+        height: 30px;
+        background-image: url("../../img/viewlogo02.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig01 {
+        position: absolute;
+        top: 15rem;
+        right: 35rem;
+        width: 18.75rem;
+        height: 240px;
+        background-image: url("../../img/viewpic03.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig02 {
+        position: absolute;
+        top: 6rem;
+        right: 15rem;
+        width: 25.75rem;
+        height: 216px;
+        background-image: url("../../img/viewpic02.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig03 {
+        position: absolute;
+        top: 15rem;
+        right: 20rem;
+        width: 51.25rem;
+        height: 25rem;
+        background-image: url("../../img/viewpic01.png");
+        opacity: 0; }
+    #view_area .btn {
       position: absolute;
-      top: 0;
-      left: -10rem;
-      width: 46.5rem;
-      height: 327px;
-      background-image: url("../../img/viewlogo01.png");
+      top: 28rem;
+      left: 8rem;
+      width: 27rem;
+      height: 4rem;
       opacity: 0; }
-    #view_area .view_bg .view_logo02 {
+      #view_area .btn > a {
+        display: block;
+        float: left;
+        width: 12.5rem;
+        height: 100%;
+        font-size: 20px;
+        font-size: 1.25rem;
+        color: #171717;
+        word-break: keep-all;
+        font-weight: bold;
+        line-height: 4rem;
+        text-align: center;
+        background-color: #fff;
+        border: 1px solid #fff;
+        box-sizing: border-box; }
+        #view_area .btn > a:first-child {
+          margin-right: 1.875rem; }
+        #view_area .btn > a:hover {
+          background-color: #ffcf00;
+          border: 1px solid #ffcf00;
+          box-sizing: border-box; } }
+
+@media screen and (min-width: 1920px) {
+  #view_area {
+    width: 100%;
+    height: auto;
+    padding: 5rem 10%;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: auto 100%;
+    background-image: url("../../img/viewpic.jpg"); }
+    #view_area .view_bg {
+      position: relative;
+      width: 100%; }
+      #view_area .view_bg > div {
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        background-size: contain; }
+      #view_area .view_bg .view_logo01 {
+        position: absolute;
+        top: 0;
+        left: -10rem;
+        width: 46.5rem;
+        height: 327px;
+        background-image: url("../../img/viewlogo01.png");
+        opacity: 0; }
+      #view_area .view_bg .view_logo02 {
+        position: absolute;
+        top: 6rem;
+        left: 20rem;
+        width: 17.5rem;
+        height: 30px;
+        background-image: url("../../img/viewlogo02.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig01 {
+        position: absolute;
+        top: 15rem;
+        right: 35rem;
+        width: 18.75rem;
+        height: 240px;
+        background-image: url("../../img/viewpic03.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig02 {
+        position: absolute;
+        top: 6rem;
+        right: 15rem;
+        width: 25.75rem;
+        height: 216px;
+        background-image: url("../../img/viewpic02.png");
+        opacity: 0; }
+      #view_area .view_bg .view_pig03 {
+        position: absolute;
+        top: 15rem;
+        right: 20rem;
+        width: 51.25rem;
+        height: 25rem;
+        background-image: url("../../img/viewpic01.png");
+        opacity: 0; }
+    #view_area .btn {
       position: absolute;
-      top: 6rem;
-      left: 20rem;
-      width: 17.5rem;
-      height: 30px;
-      background-image: url("../../img/viewlogo02.png");
+      top: 28rem;
+      left: 8rem;
+      width: 27rem;
+      height: 4rem;
       opacity: 0; }
-    #view_area .view_bg .view_pig01 {
-      position: absolute;
-      top: 15rem;
-      right: 35rem;
-      width: 18.75rem;
-      height: 240px;
-      background-image: url("../../img/viewpic03.png");
-      opacity: 0; }
-    #view_area .view_bg .view_pig02 {
-      position: absolute;
-      top: 6rem;
-      right: 15rem;
-      width: 25.75rem;
-      height: 216px;
-      background-image: url("../../img/viewpic02.png");
-      opacity: 0; }
-    #view_area .view_bg .view_pig03 {
-      position: absolute;
-      top: 15rem;
-      right: 20rem;
-      width: 51.25rem;
-      height: 25rem;
-      background-image: url("../../img/viewpic01.png");
-      opacity: 0; }
+      #view_area .btn > a {
+        display: block;
+        float: left;
+        width: 12.5rem;
+        height: 100%;
+        font-size: 20px;
+        font-size: 1.25rem;
+        color: #171717;
+        word-break: keep-all;
+        font-weight: bold;
+        line-height: 4rem;
+        text-align: center;
+        background-color: #fff;
+        border: 1px solid #fff;
+        box-sizing: border-box; }
+        #view_area .btn > a:first-child {
+          margin-right: 1.875rem; }
+        #view_area .btn > a:hover {
+          background-color: #ffcf00;
+          border: 1px solid #ffcf00;
+          box-sizing: border-box; } }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  #view_area .view_logo01 {
+    width: 100%;
+    height: 25%; }
+  #view_area .view_pig01 {
+    width: 100%;
+    height: 50%; }
   #view_area .btn {
+    display: block;
     position: absolute;
-    top: 28rem;
-    left: 8rem;
-    width: 27rem;
-    height: 4rem;
-    opacity: 0; }
+    bottom: 6rem;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 3rem; }
     #view_area .btn > a {
       display: block;
-      float: left;
-      width: 12.5rem;
+      width: 10rem;
       height: 100%;
-      font-size: 20px;
-      font-size: 1.25rem;
+      margin: auto;
+      font-size: 18px;
+      font-size: 1.125rem;
       color: #171717;
       word-break: keep-all;
       font-weight: bold;
-      line-height: 4rem;
+      line-height: 3rem;
       text-align: center;
       background-color: #fff;
       border: 1px solid #fff;
       box-sizing: border-box; }
       #view_area .btn > a:first-child {
-        margin-right: 1.875rem; }
+        margin-bottom: 1rem; }
       #view_area .btn > a:hover {
         background-color: #ffcf00;
         border: 1px solid #ffcf00;
-        box-sizing: border-box; }
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .view_bg {
-    height: 20rem; } }
+        box-sizing: border-box; } }
 
 @media screen and (min-width: 768px) and (max-width: 1279px) {
-  .view_bg {
-    height: 30rem; } }
+  #view_area .view_logo01 {
+    width: 100%;
+    height: 30%; }
+  #view_area .view_pig01 {
+    width: 100%;
+    height: 50%; }
+  #view_area .btn {
+    display: block;
+    position: absolute;
+    bottom: 3rem;
+    left: 0;
+    right: 0;
+    width: 22rem;
+    height: 3rem;
+    margin: auto; }
+    #view_area .btn > a {
+      display: block;
+      float: left;
+      width: 10rem;
+      height: 100%;
+      margin: auto;
+      font-size: 18px;
+      font-size: 1.125rem;
+      color: #171717;
+      word-break: keep-all;
+      font-weight: bold;
+      line-height: 3rem;
+      text-align: center;
+      background-color: #fff;
+      border: 1px solid #fff;
+      box-sizing: border-box; }
+      #view_area .btn > a:first-child {
+        margin-right: 1.5rem; }
+      #view_area .btn > a:hover {
+        background-color: #ffcf00;
+        border: 1px solid #ffcf00;
+        box-sizing: border-box; } }
 
 @media screen and (min-width: 1280px) and (max-width: 1919px) {
   .view_bg {
@@ -334,40 +559,38 @@
     margin-top: 12rem; }
     #sub_slide01 .sub_box .sub_car {
       position: absolute;
-      top: -5rem;
+      top: -4.2rem;
       width: 100%;
       height: 5rem; }
       #sub_slide01 .sub_box .sub_car > div {
         position: absolute;
+        width: 13rem;
+        height: 100%;
         bottom: 0;
         background-repeat: no-repeat;
         background-position: 50% 50%;
-        background-size: 100% auto; }
+        background-size: 100% auto;
+        transform: translate(-13rem); }
         #sub_slide01 .sub_box .sub_car > div.car01 {
-          left: 2rem;
-          width: 11.5rem;
-          height: 3.8125rem;
-          background-image: url("../../img/car01.png"); }
+          background-image: url("../../img/car-01.png"); }
+          #sub_slide01 .sub_box .sub_car > div.car01:hover {
+            background-image: url("../../img/car-06.png"); }
         #sub_slide01 .sub_box .sub_car > div.car02 {
-          left: 50rem;
-          width: 10.6875rem;
-          height: 3.75rem;
-          background-image: url("../../img/car02.png"); }
+          background-image: url("../../img/car-02.png"); }
+          #sub_slide01 .sub_box .sub_car > div.car02:hover {
+            background-image: url("../../img/car-07.png"); }
         #sub_slide01 .sub_box .sub_car > div.car03 {
-          left: 20rem;
-          width: 11.6875rem;
-          height: 3.1875rem;
-          background-image: url("../../img/car03.png"); }
+          background-image: url("../../img/car-03.png"); }
+          #sub_slide01 .sub_box .sub_car > div.car03:hover {
+            background-image: url("../../img/car-08.png"); }
         #sub_slide01 .sub_box .sub_car > div.car04 {
-          left: 73rem;
-          width: 11.625rem;
-          height: 3.75rem;
-          background-image: url("../../img/car04.png"); }
+          background-image: url("../../img/car-04.png"); }
+          #sub_slide01 .sub_box .sub_car > div.car04:hover {
+            background-image: url("../../img/car-09.png"); }
         #sub_slide01 .sub_box .sub_car > div.car05 {
-          left: 90rem;
-          width: 12.1875rem;
-          height: 4.125rem;
-          background-image: url("../../img/car05.png"); }
+          background-image: url("../../img/car-05.png"); }
+          #sub_slide01 .sub_box .sub_car > div.car05:hover {
+            background-image: url("../../img/car-10.png"); }
     #sub_slide01 .sub_box ul {
       width: 320rem;
       height: 100%; }
@@ -394,6 +617,14 @@
           background-image: url("../../img/pic07.jpeg"); }
         #sub_slide01 .sub_box ul li.sub08 {
           background-image: url("../../img/pic08.jpeg"); }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  #sub_slide01 {
+    display: none; } }
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  #sub_slide01 {
+    display: none; } }
 
 #cate_area {
   width: 100%;
@@ -625,6 +856,14 @@
         background-position: 50% 50%;
         background-size: 100% auto;
         background-image: url("../../img/s_04.jpg"); }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  #slide_area {
+    display: none; } }
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  #slide_area {
+    display: none; } }
 
 #favor_area {
   width: 100%;
@@ -1350,21 +1589,24 @@
       height: auto; }
       .foot_nav > ul > li:last-child {
         margin-right: 0; }
-      .foot_nav > ul > li dl dt {
-        font-weight: bold;
-        text-transform: uppercase; }
-      .foot_nav > ul > li dl dd {
+      .foot_nav > ul > li dl {
         width: auto;
-        height: auto;
-        line-height: 1.8rem;
-        font-size: 18px;
-        font-size: 1.125rem;
-        color: #171717;
-        word-break: keep-all; }
-        .foot_nav > ul > li dl dd a {
-          display: block;
-          width: 100%;
-          height: 100%; }
+        height: auto; }
+        .foot_nav > ul > li dl dt {
+          font-weight: bold;
+          text-transform: uppercase; }
+        .foot_nav > ul > li dl dd {
+          width: auto;
+          height: auto;
+          line-height: 1.8rem;
+          font-size: 15px;
+          font-size: 0.9375rem;
+          color: #171717;
+          word-break: keep-all; }
+          .foot_nav > ul > li dl dd a {
+            display: block;
+            width: 100%;
+            height: 100%; }
 
 .company_info {
   width: 100%;
@@ -1425,10 +1667,23 @@
       width: 100%;
       height: 5rem;
       line-height: 5rem; }
+      .foot_nav dl dt button {
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #171717;
+        font-size: 18px;
+        font-size: 1.125rem;
+        color: #171717;
+        word-break: keep-all; }
     .foot_nav dl dd {
       display: none; }
       .foot_nav dl dd:last-child {
         margin-bottom: 2rem; }
+      .foot_nav dl dd a {
+        font-size: 15px;
+        font-size: 0.9375rem;
+        color: #171717;
+        word-break: keep-all; }
   .company_info .f_info_wrap {
     width: auto; }
     .company_info .f_info_wrap .foot_zone {
@@ -1476,10 +1731,23 @@
       width: 100%;
       height: 5rem;
       line-height: 5rem; }
+      .foot_nav dl dt button {
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #171717;
+        font-size: 18px;
+        font-size: 1.125rem;
+        color: #171717;
+        word-break: keep-all; }
     .foot_nav dl dd {
       display: none; }
       .foot_nav dl dd:last-child {
         margin-bottom: 2rem; }
+      .foot_nav dl dd a {
+        font-size: 15px;
+        font-size: 0.9375rem;
+        color: #171717;
+        word-break: keep-all; }
   .company_info .f_info_wrap {
     width: auto; }
     .company_info .f_info_wrap .foot_zone {
@@ -1516,7 +1784,7 @@
   .email_area .mail_box {
     width: 50rem; }
   .foot_nav ul {
-    width: 74rem; }
+    width: 65rem; }
     .foot_nav ul li {
       float: left;
       margin-right: 6rem; }
@@ -1532,7 +1800,7 @@
           color: #171717;
           word-break: keep-all; }
   .company_info .f_info_wrap {
-    width: 74rem; }
+    width: 65rem; }
     .company_info .f_info_wrap .foot_zone {
       float: left;
       width: 20%; }
@@ -1549,7 +1817,7 @@
   .email_area .mail_box {
     width: 50rem; }
   .foot_nav ul {
-    width: 74rem; }
+    width: 65rem; }
     .foot_nav ul li {
       float: left;
       margin-right: 6rem; }
@@ -1565,7 +1833,7 @@
           color: #171717;
           word-break: keep-all; }
   .company_info .f_info_wrap {
-    width: 74rem; }
+    width: 65rem; }
     .company_info .f_info_wrap .foot_zone {
       float: left;
       width: 20%; }
