--- a/scss/_temp/lego_home_03_slide.scss
+++ b/scss/_temp/lego_home_03_slide.scss
@@ -35,7 +35,7 @@
 }//slide_area
 
 // 반응형 ====================================
-@include mobile{}
-@include tablet{}
-@include labtop{}
-@include pcfull{}
+@include mo_ta{
+  #slide_area{display: none;
+  }
+}
